<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".view.DetailFragment">




    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="353dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            tools:src="@tools:sample/avatars" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_bg" />

    </FrameLayout>

    <ImageView
        android:id="@+id/imageBack"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/app_bar_menu_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/age" />

            <TextView
                android:id="@+id/textComics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Text 1"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/weight" />

            <TextView
                android:id="@+id/textSeries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Text 2"
                android:textColor="@color/white" />
        </LinearLayout>

        <!-- Item 3 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/height" />

            <TextView
                android:id="@+id/textStories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Text 3"
                android:textColor="@color/white" />
        </LinearLayout>

        <!-- Item 4 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/universe" />

            <TextView
                android:id="@+id/textEvents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Text 4"
                android:textColor="@color/white" />
        </LinearLayout>


    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/textDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/characteristic_text_size"
                android:paddingStart="16dp"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/no_description"
                android:textColor="@color/white">

            </TextView>

            <!-- First row -->
            <LinearLayout
                android:paddingTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:fontFamily="@font/gilroy_medium"
                    android:textColor="@color/white"
                    android:textSize="@dimen/characteristic_text_size"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="16dp"
                    android:text="@string/comics"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerComics"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingEnd="16dp"
                    android:layout_weight="1"
                    android:scrollbars="none" />
            </LinearLayout>

            <!-- Second row -->
            <LinearLayout
                android:paddingTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:fontFamily="@font/gilroy_medium"
                    android:textColor="@color/white"
                    android:textSize="@dimen/characteristic_text_size"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="16dp"
                    android:text="@string/series"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewSeries"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingEnd="16dp"
                    android:layout_weight="1"
                    android:scrollbars="none" />
            </LinearLayout>

            <!-- Third row -->
            <LinearLayout
                android:paddingTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:fontFamily="@font/gilroy_medium"
                    android:textColor="@color/white"
                    android:textSize="@dimen/characteristic_text_size"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="16dp"
                    android:text="@string/events" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewStories"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingEnd="16dp"
                    android:layout_weight="1"
                    android:scrollbars="none" />
            </LinearLayout>

            <!-- Fourth row -->
            <LinearLayout
                android:paddingTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:fontFamily="@font/gilroy_medium"
                    android:textColor="@color/white"
                    android:textSize="@dimen/characteristic_text_size"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:layout_weight="1"
                    android:text="@string/series"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewEvents"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingEnd="16dp"
                    android:layout_weight="1"
                    android:scrollbars="none" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>